# architec

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: binaries.yml  npm.yml  publish-release.yml  release.yml  validate-release-matrix.yml
architec-cloud/: .env.example  .env.local.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
architec-cloud/docs/: stripe-live-cutover.md
architec-cloud/tools/: install-stripe-cli.sh  local-smoke.sh  run-e2e-web.sh  stripe-env-check.sh  stripe-local-listen.sh
claude_skills/archi-advice/: SKILL.md
config/: architec-llm.example.yaml  config.default.yaml  rubric.json  scoring-policy.json
docs/: architect-capability-plan.md  architecture-plan.md  commercial-rollout-plan.md  folder-naming-judge-plan.md  github-releases.md  launch-readiness-audit.md  llm-ops-maintenance-prompt.md  npm-release.md  progressive-architectural-cleanup-acceptance.md  progressive-architectural-cleanup.md  research-baselines.md  usage-manual.md
lib/: archi-dispatcher.js
prompts/: .analyze.md.swp  analyze.md  codex-repair.md  component-qa.md  component-scoring.md  feature-architecture.md  folder-naming-judge.md  full-report.md  history-remediation.md  orchestrator-program.md  review-diff.md  semantic-judge.md  split-expert.md  summary.md  system.md  tool-orchestrator.md  topology-review-judge.md
scripts/: build-standalone-archi.py  check-release-assets.js  postinstall.js  smoke-dispatcher.js
tests/: backend_llm_test_support.py  conftest.py  test_analysis_runner.py  test_analysis_runner_flow.py  test_analysis_runner_report.py  test_architecture_contracts.py  test_architecture_report_compaction.py  test_architecture_report_md.py  test_architecture_report_sections.py  test_architecture_rules.py  test_auth_client_commands.py  test_auth_store.py  test_backend_llm.py  test_backend_llm_architect_config.py  test_backend_llm_candidate_chain.py  test_backend_llm_failover.py  test_backend_llm_json_paths.py  test_backend_llm_transport_payloads.py  test_backend_llm_transport_text.py  test_baseline_public.py  test_bundle_loader.py  test_cleanup_archive.py  test_cleanup_autofix.py  test_cleanup_inventory.py  test_cleanup_public.py  test_cleanup_scope.py  test_cleanup_semantic_judge.py  test_cli_main.py  test_code_review.py  test_collect_repo_metrics_helpers.py  test_component_descriptors.py  test_component_scoring_git.py  test_component_scoring_runtime.py  test_dual_scoring_contract.py  test_events.py  test_feature_advisor.py  test_feature_query.py  test_fix_advice.py  test_gate_public.py  test_hippo_adapter.py  (+21 more)
tools/: archi_entry.py  architec.py  build_architect_prompt.py  build_nuitka.sh  build_release.py  collect_repo_metrics.py  collect_repo_metrics_python.py  collect_repo_metrics_rules.py  collect_repo_metrics_runtime.py  collect_repo_metrics_scan.py  install_prod.ps1  install_prod.sh  prod_browser_auth_smoke.sh  publish_release.sh  refresh_architect_context.sh  run_archi_via_auth_tunnel.sh  smoke_install_prod.sh
(+380 files in other folders)
