[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architec"
version = "0.2.5"
description = "Architecture analysis CLI powered by Hippo bundles and backend LLMs."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "llmgateway>=0.1.0",
    "cryptography>=43",
]

[project.scripts]
archi = "architec.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
