[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architec"
version = "0.2.10"
description = "Architecture analysis CLI powered by Hippo bundles and backend LLMs."
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.0.0",
    "PyYAML>=6.0",
    "llmgateway @ git+https://github.com/SeemSeam/llmgateway.git",
    "hippocampus @ git+https://github.com/SeemSeam/hippocampus.git",
    "cryptography>=43",
]

[project.scripts]
archi = "architec.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "release-flow-test",
    ".architec",
    ".hippocampus",
    "build",
    "dist",
]
